# CERT-x466-003

./: .gitignore  CERT-x466-003_MAIN.ipynb  CLAUDE.md  README.md  pyproject.toml
.ipynb_checkpoints/: CERT-x466-003_MAIN-checkpoint.ipynb
data/: boot_ai_job_market_dataset.csv
docs/assignments/: Logan-R-Sloan_CERT-x466-003_Assignment01.md  Logan-R-Sloan_CERT-x466-003_Assignment02.md  Logan-R-Sloan_CERT-x466-003_Assignment02_submission.md  Logan-R-Sloan_CERT-x466-003_Assignment03_submission.md  assignments_master.md
