[project]
name = "cert-x466-003"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "python-dotenv==1.2.2",
    "numpy==2.2.6",
    "tensorflow[and-cuda]>=2.21.0",
    "scikit-learn>=1.8.0",
]
